--- a/www/results.html
+++ b/www/results.html
@@ -83,7 +83,7 @@
               <h3><strong>Get There</strong></h3>
               <p>Your day belongs to you.</p>
               <br>
-              <a class="btn btn-primary page-scroll" href="#about">LET'S BEGIN!
+              <a class="btn btn-primary page-scroll" href="#results">LET'S BEGIN!
               <br><br><br><br>
               <i class="icon icon_down-arrow-thin font-white pull-right" style="color: white !important;"></i>
               </a>
@@ -98,23 +98,36 @@
     </section>
 
     <!-- Results Section -->
-    <section id="resuls" class="search-section">
+    <section id="results" class="search-section">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Results Section</h1>
-                    <hr>
-                    <p>DATATABLE</p>
-                </div>
-            </div>
-        </div>
-    </section>
+                      <div class="row" style="background-color: #eee; padding: 10px 0px;">
+                        <div class="col-md-2"> Zip Code: 20740 </div>
+              					<div class="col-md-2"> Monthly Rent: $1,139 </div>
+              					<div class="col-md-2"> Transit Time: 30 minutes </div>
+              					<div class="col-md-5"> Transit Details: You should travel by UberX. It will cost you $18.125. Public transportation takes 36 minutes longer than Uber, so use Uber. The $13.375 extra for Uber is within your price tolerance. </div>
+              					<div class="col-md-1"> Livability Index: 48 </div>
+                      </div>
 
-    <!-- Data Sources Section -->
-    <section id="data" class="data-section">
-        <div class="container">
-            <div class="row">
-                <p>Placeholder</p>
+                      <div class="row" style="background-color: #fff; padding: 10px 0px;">
+                        <div class="col-md-2"> Zip Code: 20910  </div>
+              					<div class="col-md-2"> Monthly Rent: $1,050 </div>
+              					<div class="col-md-2"> Transit Time: 39 minutes </div>
+              					<div class="col-md-5"> Transit Details: You should travel by Bus. It will cost you $1.75. Uber is similar to public transportation in cost, duration, and distance. Use public transportation because it's $8.25 cheaper. </div>
+              					<div class="col-md-1"> Livability Index: 62 </div>
+                      </div>
+
+                      <div class="row" style="background-color: #eee; padding: 10px 0px;">
+                        <div class="col-md-2"> Zip Code: 20737  </div>
+              					<div class="col-md-2"> Monthly Rent: $740 </div>
+              					<div class="col-md-2"> Transit Time: 53 minutes </div>
+              					<div class="col-md-5"> Transit Details: You should travel by Subway. It will cost you $3. Uber is similar to public transportation in cost, duration, and distance. Use public transportation because it's $12.0 cheaper. </div>
+              					<div class="col-md-1"> Livability Index: 53 </div>
+                      </div>
+
+                </div>
             </div>
         </div>
     </section>
@@ -150,8 +163,13 @@
     <script type="text/javascript" src="https://use.typekit.net/bpk0tpr.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-    <!-- Other js files -->
-    <script src="www/js/main.js"></script>
+    <!-- Other js files
+    <script src="www/js/main.js"></script> -->
+    <script>
+    $(document).ready(function() {
+      $('example').DataTable();
+    }  );
+    </script>
 
 </body>
 
